# princemarketing.com

./: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
bible/00_bible/: PrinceMarketing_WORLD_BIBLE.md  archetype_profile.md  cinematic_techniques_bible.md
davinci-finishing-agent/: .env.example  README.md  agent.py  cli.py  config.py  davinci_driver.py  gcs_upload.py  pyproject.toml  requirements.txt
docs/: AD_MANAGER_INTEGRATION.md  MUAPI-VS-OUR-STACK.md  TEST_REPORT.md
docs/refs/: aimikoda_storyboard_prompt_share.md
docs/sales/: cluely-context.md  discovery-script.md  objection-playbook.md
prisma/: schema.prisma
prisma/migrations/20260420000000_add_limerence_system/: migration.sql
scripts/: seed-ladonte-cast.ts
scripts/stc-reindex/: chunk.py  embed_upsert.py  structure.py  verify.py
src/: middleware.ts
src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/app/dashboard/: page.tsx
src/app/privacy/: page.tsx
src/app/storyboard-preview/: page.tsx
src/app/terms/: page.tsx
src/components/: AuthProvider.tsx  ErrorBoundary.tsx  GoogleAnalytics.tsx  SplineBackground.tsx  StructuredData.tsx
src/lib/: action-validation.ts  api-client.ts  api.ts  auth.ts  cast-resolver.ts  chat-compaction.ts  claude.ts  composio.ts  db.ts  feature-flags.ts  rate-limiter.ts  session.ts  sheet-crop.ts  store.ts  storyboard-sheet-prompt.ts  stripe.ts
src/styles/: globals.css
src/types/: calendar.ts  campaign.ts  canvas.ts  ids.ts  user.ts
src/utils/: date.ts  errors.ts  format.ts
(+138 files in other folders)
